# aloe

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/aloe/core/: CommandList.h  Device.h  FrameGraph.h  Handles.h  PipelineManager.h  ResourceManager.h  Resources.h  Swapchain.h  TaskGraph.h  aloe.slang  aloe.slang.h  application.h  handles.h
include/aloe/util/: algorithms.h  log.h  vulkan_util.h
include/vma/: vma.h
src/: CMakeLists.txt  example.cpp  vma.cpp
src/core/: CommandList.cpp  Device.cpp  PipelineManager.cpp  ResourceManager.cpp  Swapchain.cpp  TaskGraph.cpp  application.cpp
test/: CMakeLists.txt  test.cpp
test/core/: command_list_tests.cpp  device_tests.cpp  pipeline_manager_tests.cpp  resource_manager_tests.cpp  swapchain_tests.cpp  task_graph_tests.cpp
test/core/resources/: test.slang
